# code-header-gen

./: .gitignore  Cargo.toml  readme.md
.hgen/: languages.json  settings.json
.hgen/templates/: master.hbs  rust.hbs
result/: test.c  test.cpp  test.h  test.py  test.rs  test.vhd
src/: main.rs
