[package]
name = "hgen"
author = ["Lowie Deferme"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.4", features = ["derive"] }
handlebars = "4.1.6"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
chrono = "0.4.19"